// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Multichannel wrapper 1 text in 1 single message 1`] = `
<message
  delay={0}
  markdown={0}
  type="text"
  typing={0}
>
  Text1
</message>
`;

exports[`Multichannel wrapper 2 text in 1 single message 1`] = `
<message
  delay={0}
  markdown={0}
  type="text"
  typing={0}
>
  Text1
  
Text2
</message>
`;

exports[`Multichannel wrapper 2 texts with buttons 1`] = `
<message
  delay={0}
  markdown={0}
  type="text"
  typing={0}
>
  Text1
  
Button 1
  
Text2
  
Button 2
</message>
`;

exports[`Multichannel wrapper just text 1`] = `
<message
  delay={0}
  indexMode="number"
  markdown={0}
  type="text"
  typing={0}
>
  Some text
</message>
`;

exports[`Multichannel wrapper many multichannels 1`] = `
[
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    type="text"
    typing={0}
  >
    Some text with replies
    
1. Reply 1
    
2. Reply 2
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    type="text"
    typing={0}
  >
    Some text with replies
    
3. Reply 1 should have 3.
    
4. Reply 2 should have 4.
  </message>,
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    type="text"
    typing={0}
  >
    Some text with replies
    
1. Reply 1 number reset
    
2. Reply 2 number reset
  </message>,
]
`;

exports[`Multichannel wrapper text and carousel legacy 1`] = `
[
  <message
    delay={0}
    indexMode="number"
    markdown={0}
    type="text"
    typing={0}
  >
    This is a multichannel Carousel
  </message>,
  <message
    delay={0}
    role="image-message"
    src="https://cdn.slidesharecdn.com/profile-photo-sumeet.moghe-48x48.jpg?cb=1527568614"
    type="image"
    typing={0}
  />,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *Title1* _Subtitle1_
    <button
      payload="Payload1"
    >
      Previo a la compra
    </button>
  </message>,
  <message
    delay={0}
    role="image-message"
    src="https://cdn.slidesharecdn.com/profile-photo-sumeet.moghe-48x48.jpg?cb=1527568614"
    type="image"
    typing={0}
  />,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *Title2* _Subtitle2_
    <button
      payload="Payload2.1"
    >
      Durante la compra
    </button>
    <button
      payload="Payload2.2"
    >
      Durante la compra2
    </button>
  </message>,
  <message
    delay={0}
    role="image-message"
    src="https://cdn.slidesharecdn.com/profile-photo-sumeet.moghe-48x48.jpg?cb=1527568614"
    type="image"
    typing={0}
  />,
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *Title3* _Subtitle3_
    <button
      payload="Payload3"
    >
      Posterior a la compra
    </button>
  </message>,
]
`;

exports[`Multichannel wrapper text and carousel only show button text, 1 single message 1`] = `
<message
  delay={0}
  markdown={0}
  type="text"
  typing={0}
>
  This is a multichannel Carousel
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *undefined* _Subtitle will not appear_
    <button
      payload="Payload1"
    >
      Previo
    </button>
  </message>
  <message
    delay={0}
    markdown={1}
    type="text"
    typing={0}
  >
    *undefined*
    <button
      payload="Payload2"
    >
      Durante
    </button>
  </message>
</message>
`;

exports[`Multichannel wrapper text with buttons 1`] = `
<message
  delay={0}
  indexMode="number"
  markdown={0}
  type="text"
  typing={0}
>
  Some with buttons
  
1. Button 1
  
2. Button 2
  
- Visit website: http://testurl.com
</message>
`;

exports[`Multichannel wrapper text with replies 1`] = `
<message
  delay={0}
  indexMode="number"
  markdown={0}
  type="text"
  typing={0}
>
  Some text with replies
  
1. Reply 1
  
2. Reply 2
</message>
`;
